# Game-Engine

./: .gitignore  Game-Engine.cabal  Game.cabal  GameEngine.cabal  GameEngine.hs  README.md  stack.yaml
Game/: Agent.hs  Background.hs  Camera.hs  Collect.hs  ConfigReader.hs  Counter.hs  Force.hs  Game.hs  HitBox.hs  Live.hs  Position.hs  Size.hs  Stage.hs  StageConfigReader.hs  Thing.hs  ThingConfigReader.hs  Tile.hs  TileConfigReader.hs  TileGrid.hs  TileGridConfigReader.hs  TileSet.hs  TileSetConfigReader.hs  Tiles.hs  Velocity.hs
Game/ConfigReader/: Arg.hs  ArgFmt.hs  Config.hs  ConfigFmt.hs  Modifier.hs  Option.hs  OptionFmt.hs  Parser.hs
GameEngine/: AI.hs  Agent.hs  Background.hs  Camera.hs  Collect.hs  ConfigReader.hs  Counter.hs  Force.hs  Game.hs  HitBox.hs  Live.hs  Position.hs  Rectangle.hs  Size.hs  Stage.hs  StageConfigReader.hs  Thing.hs  ThingConfigReader.hs  Tile.hs  TileConfigReader.hs  TileGrid.hs  TileGridConfigReader.hs  TileSet.hs  TileSetConfigReader.hs  Velocity.hs
GameEngine/AI/: Agent.hs  Client.hs  Live.hs  Reproducing.hs
GameEngine/ConfigReader/: Arg.hs  ArgFmt.hs  Config.hs  ConfigFmt.hs  Modifier.hs  Option.hs  OptionFmt.hs  Parser.hs
GameEngine/Stage/: ConfigReader.hs
GameEngine/Thing/: ConfigReader.hs
GameEngine/Tile/: ConfigReader.hs
GameEngine/TileGrid/: ConfigReader.hs
GameEngine/TileSet/: ConfigReader.hs
GameEngine/UI/: Txt.hs
