name:                Game-Engine
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable game
  main-is:             GameEngine/Game.hs
  --other-modules:       
  other-extensions:    PatternSynonyms
                     , OverloadedStrings

  build-depends:       base       >=4.7  && <4.9
                     , sdl2       >=2.1  && <2.2
                     , linear     >=1.20 && <1.21
                     , containers >=0.5  && <0.6
                     , lens
                     , megaparsec
                     , directory
                     , text
  -- hs-source-dirs:      
  default-language:    Haskell2010
